--- a/config/docker-config.yaml
+++ b/config/docker-config.yaml
@@ -1,12 +1,12 @@
 mode: release
-use_in_memory: false
+use_in_memory: true
 http:
   port: 8080
 grpc:
   port: 6345
   hostname: 0.0.0.0
 postgres:
-  url: "host=banner-bd port=5432 user=intern password=fyr8as4da6 dbname=url_db sslmode=disable"
+  url: "host=url-bd port=5432 user=intern password=fyr8as4da6 dbname=url_db sslmode=disable"
   max_connections: 10
   min_connections: 5
   ttl_idle_connections: 100
